--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
   "type": "module",
   "main": "index.mjs",
   "scripts": {
-    "start": "node index.mjs",
+    "start": "node -r dotenv/config index.mjs",
     "test": "cowsay \"not implemented lol, it just works ¯\\_(ツ)_/¯\""
   },
   "dependencies": {
-    "@types/blessed": "^0.1.25",
-    "blessed": "^0.1.81",
-    "discord-rich-presence": "^0.0.8",
+    "discord-rpc": "^4.0.1",
     "puppeteer": "^24.27.0"
   }
 }
