--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # copy/rename this file to .env and edit that
 # you can delete these comments btw
+CLIENT_ID="xxxxxxxxxxxxxxxxxxx"
 STATUS_TEXT="1234-5678-0000" # or whatever message you want, this goes directly to Discord
 PID="123456789" # find yourself on https://wiimmfi.de/stats/mkw, hover the 👁️, and enter the PID
+RECONNECT_TIMEOUT=5000
 MKW_ANA_ENABLED=false # use mkw-ana features? needs some hardware setup, see https://wiki.tockdom.com/wiki/Wiimms_mkw-ana_(tool)#Capture_the_network_data
 MKW_ANA_COMMAND="tcpdump -w- -U -i eth1 host wii | tee save.dump | mkw-ana" # or whatever your setup is. include call to mkw-ana.
