--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "discord-rpc": "^4.0.1",
-    "puppeteer": "^24.27.0"
+    "dotenv": "^17.2.3",
+    "puppeteer": "^24.29.1"
   },
   "devDependencies": {
     "@types/discord-rpc": "^4.0.9",
