--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "discord-rpc": "^4.0.1",
     "dotenv": "^17.2.3",
-    "puppeteer": "^24.29.1"
+    "puppeteer": "^24.29.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
     "@types/discord-rpc": "^4.0.9",
