--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
-# copy/rename this file to .env and edit that
-# you can delete these comments btw
-CLIENT_ID="xxxxxxxxxxxxxxxxxxx"
+USERAGENT="Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/142.0.0.0 Safari/537.36" # find yours by running navigator.userAgent in chromium
+CF_CLEARANCE="something" # get ur own cookie
 PID="123456789" # find yourself on https://wiimmfi.de/stats/mkw, hover the 👁️, and enter the PID
-RECONNECT_TIMEOUT=5000 # if something goes wrong, wait this many milliseconds before trying again
 MKW_ANA_ENABLED=false # use mkw-ana features? needs some hardware setup, see https://wiki.tockdom.com/wiki/Wiimms_mkw-ana_(tool)#Capture_the_network_data
 MKW_ANA_COMMAND="tcpdump -w- -U -i eth1 host wii | tee save.dump | mkw-ana" # or whatever your setup is. include call to mkw-ana.
