--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-USERAGENT="Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/142.0.0.0 Safari/537.36" # find yours by running navigator.userAgent in chromium
-CF_CLEARANCE="something" # get ur own cookie
-PID="123456789" # find yourself on https://wiimmfi.de/stats/mkw, hover the 👁️, and enter the PID
-MKW_ANA_ENABLED=false # use mkw-ana features? needs some hardware setup, see https://wiki.tockdom.com/wiki/Wiimms_mkw-ana_(tool)#Capture_the_network_data
-MKW_ANA_COMMAND="tcpdump -w- -U -i eth1 host wii | tee save.dump | mkw-ana" # or whatever your setup is. include call to mkw-ana.
+USERAGENT="Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/142.0.0.0 Safari/537.36" # find yours by running navigator.userAgent in a chromium browser
+CF_CLEARANCE="something" # get ur own cookie (pass captcha on wiimfi's stats page in your own browser, preferably just straight up blue chromium)
+PID="123456789" # find yourself on https://wiimmfi.de/stats/mkw, hover the 👁️, and enter the PID (or click it and get it from the URL)
+MKW_ANA_ENABLED=false # NOT IMPLEMENTED, WON'T DO ANYTHING — use mkw-ana features? needs some hardware setup, see https://wiki.tockdom.com/wiki/Wiimms_mkw-ana_(tool)#Capture_the_network_data
+MKW_ANA_COMMAND="tcpdump -w- -U -i eth1 host wii | tee save.dump | mkw-ana" # or whatever your packet dump setup is. /!\ include call to mkw-ana /!\
