--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "cowsay \"not implemented lol, it just works ¯\\_(ツ)_/¯\""
   },
   "dependencies": {
+    "chalk": "^5.6.2",
     "discord-rpc": "^4.0.1",
     "dotenv": "^17.2.3",
     "puppeteer": "^24.29.1",
