--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 VERBOSITY="INFO" # INFO, WARN, or ERROR. ERROR only logs errors; WARN logs warnings and errors, and INFO logs all three. that makes sense, right?
+HEADLESS_BROWSER=false # whether or not the scraper browser should be headless.
 USERAGENT="Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/142.0.0.0 Safari/537.36" # find yours by running navigator.userAgent in a chromium browser
 CF_CLEARANCE="something" # get ur own cookie (pass captcha on wiimfi's stats page in your own browser, preferably just straight up blue chromium)
 PID="123456789" # find yourself on https://wiimmfi.de/stats/mkw, hover the 👁️, and enter the PID (or click it and get it from the URL)
