--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mkwii-rpc",
-  "version": "1.1.3",
-  "description": "a Discord Rich Presence (RPC) app that shows your Mario Kart Wii on Wiimmfi status. eventually will be customizable. deps: blessed, discord-rich-presence, puppeteer.",
+  "version": "1.2.0",
+  "description": "a Discord Rich Presence (RPC) app that shows your Mario Kart Wii on Wiimmfi status. eventually will be customizable. deps: chalk, discord-rpc, puppeteer.",
   "keywords": [
     "discord-rpc",
     "discord-rich-presence",
